--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
@@ -1,12 +1,12 @@
 ﻿<div class="gallery-browse-item pa-2 d-flex flex-column gap-2 rounded @(IsSelected ? "selected" : "") @(IsEditing ? "editing" : "")"
-     style="height: @Height; overflow-y: auto; overflow-x: hidden;"
+     style="height: 300px; overflow-y: auto; overflow-x: hidden;"
      onclick="@OnClick"
      @oncontextmenu="@(OpenContextMenu)"
      @oncontextmenu:preventDefault>
     <MudText Typo="Typo.h6">@Gallery.Title</MudText>
     <a href=@($"/gallery/{Gallery.Id}") target="_blank">
-        <div class="d-flex" style="width: 100%; height: 150px; overflow-x: hidden;">
-            @for (int i = 1; i <= MAX_THUMBNAIL_IMAGES; i++) {
+        <div id="@_imageContainerId" class="d-flex" style="width: 100%; height: @(THUMBNAIL_IMAGE_HEIGHT)px; overflow-x: hidden;">
+            @for (int i = 1; i <= _maxImageCount; i++) {
                 <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") loading="lazy" />
             }
         </div>
