implemented SettingsPage and SettingsCard

--- a/HitomiScrollViewerWebApp/Pages/GalleryViewPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/GalleryViewPage.razor
@@ -118,11 +118,11 @@
                                  Disabled="@_isAutoScrolling"
                                  ValueChanged="@OnPageOffsetChanged"
                                  Label="Page Offset"
-                                 Min="0" Max="@(_viewConfiguration.ImagesPerPage - 1)"
+                                 Min="0" Max="@(_imagesPerPage - 1)"
                                  Variant="Variant.Outlined"
                                  Style="max-width: 120px" />
                 <MudNumericField T="int"
-                                 @bind-Value="@_viewConfiguration.ImagesPerPage"
+                                 @bind-Value="@_imagesPerPage"
                                  Disabled="@_isAutoScrolling"
                                  Label=@(_viewConfiguration.ImageLayoutMode == ImageLayoutMode.Automatic ? "Maximum Images per Page" : "Images per Page")
                                  Min="1" Max=@Math.Min(4, _gallery.Images.Count)
