--- a/HitomiScrollViewerWebApp/Pages/SettingsPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SettingsPage.razor
@@ -2,20 +2,18 @@
 
 <PageTitle>Settings</PageTitle>
 
-@* TODO set default ViewConfiguration here *@
-
-<div class="pa-8">
-    <MudText Typo="Typo.h4" Class="mb-8">Settings</MudText>
-    @* TODO create SettingsCard.razor by referencing Windows Community Toolkit Gallery's SettingsCard *@
-    <MudPaper Class="pa-4">
-        <MudSelect T="string" Label="Language" Variant="Variant.Outlined" Style="width: 200px;">
+<div class="d-flex flex-column gap-4 pa-8">
+    <MudText Typo="Typo.h4">Settings</MudText>
+    <SettingsCard Icon="@Icons.Material.Filled.Language"
+                    Header="Language">
+        <MudSelect T="string" Variant="Variant.Outlined" Style="max-width: 200px;">
             <MudSelectItem T="string">English</MudSelectItem>
             <MudSelectItem T="string">Korean</MudSelectItem>
         </MudSelect>
-
+    </SettingsCard>
+        @*
         <div class="d-flex gap-2">
             <div class="flex-grow-1">
-                @*
                         <script src="https://accounts.google.com/gsi/client" async></script>
                         <div id="g_id_onload"
                         data-client_id="TODO_client_id"
@@ -33,9 +31,96 @@
                         data-size="large"
                         data-logo_alignment="left">
                         </div>
-                        *@
+                        
             </div>
-            <MudButton EndIcon="@Icons.Material.Outlined.Refresh" Color="Color.Primary" Variant="Variant.Outlined">Sync</MudButton>
         </div>
     </MudPaper>
+        *@
+
+    <MudText Typo="Typo.h4">Default Gallery View Settings</MudText>
+    <SettingsCard Icon="@(ViewConfigurationService.Config.ViewMode == ViewMode.Default ? Icons.Material.Rounded.Rectangle : Icons.Material.Filled.TableRows)"
+                    Header="View Mode">
+        <MudSelect T="ViewMode"
+                    Variant="Variant.Outlined"
+                    Style="max-width: 200px;"
+                    Value="@ViewConfigurationService.Config.ViewMode"
+                    ValueChanged="@OnViewModeChanged">
+            <MudSelectItem T="ViewMode" Value="ViewMode.Default"></MudSelectItem>
+            <MudSelectItem T="ViewMode" Value="ViewMode.Scroll"></MudSelectItem>
+        </MudSelect>
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Timer"
+                    Header="Page Turn Interval"
+                    Description="Number of seconds to wait before turning to the next page.">
+        <MudSlider T="int" ValueLabel TickMarks
+                    Min="1" Max="20"
+                    Value=@ViewConfigurationService.Config.PageTurnInterval
+                    ValueChanged=@OnPageTurnIntervalChanged
+                    Variant="Variant.Filled"
+                    Style="min-width: 240px">
+        </MudSlider>
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Settings"
+                    Header="Auto Scroll Mode">
+        <MudSelect T="AutoScrollMode"
+                    Value=@ViewConfigurationService.Config.AutoScrollMode
+                    ValueChanged="@OnAutoScrollModeChanged"
+                    Variant="Variant.Outlined">
+            <MudSelectItem T="AutoScrollMode" Value="AutoScrollMode.Continuous">Continuous</MudSelectItem>
+            <MudSelectItem T="AutoScrollMode" Value="AutoScrollMode.ByPage">By Page</MudSelectItem>
+        </MudSelect>
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Speed"
+                    Header="Scroll Speed">
+        <MudSlider T="int" ValueLabel TickMarks
+                    Min="1" Max="8"
+                    Value=@ViewConfigurationService.Config.ScrollSpeed
+                    ValueChanged=@OnScrollSpeedChanged
+                    Variant="Variant.Filled"
+                    Style="min-width: 240px">
+        </MudSlider>
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Loop"
+                    Header="Loop"
+                    Description="Whether you can go back to the first page when you reach the end.">
+        <MudSwitch T="bool"
+                    Value=@ViewConfigurationService.Config.Loop
+                    ValueChanged=@OnLoopChanged
+                    Color="Color.Primary" />
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Settings"
+                    Header="Image Layout Mode">
+        <MudSelect T="ImageLayoutMode"
+                    Value=@ViewConfigurationService.Config.ImageLayoutMode
+                    ValueChanged="@OnImageLayoutModeChanged"
+                    Variant="Variant.Outlined"
+                    Style="max-width: 200px">
+            <MudSelectItem T="ImageLayoutMode" Value="ImageLayoutMode.Automatic" />
+            <MudSelectItem T="ImageLayoutMode" Value="ImageLayoutMode.Fixed" />
+        </MudSelect>
+    </SettingsCard>
+    <SettingsCard Icon="@(ViewConfigurationService.Config.ViewDirection == ViewDirection.LTR ? Icons.Material.Filled.East : Icons.Material.Filled.West)"
+                    Header="View Direction">
+        <MudSelect T="ViewDirection"
+                    Value=@ViewConfigurationService.Config.ViewDirection
+                    ValueChanged="@OnViewDirectionChanged"
+                    Variant="Variant.Outlined">
+            <MudSelectItem T="ViewDirection" Value="ViewDirection.LTR">Left to Right</MudSelectItem>
+            <MudSelectItem T="ViewDirection" Value="ViewDirection.RTL">Right to Left</MudSelectItem>
+        </MudSelect>
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Settings"
+                    Header="Invert Click Navigation">
+        <MudSwitch T="bool"
+                    Value=@ViewConfigurationService.Config.InvertClickNavigation
+                    ValueChanged=@OnInvertClickNavigationChanged
+                    Color="Color.Primary" />
+    </SettingsCard>
+    <SettingsCard Icon="@Icons.Material.Filled.Settings"
+                    Header="Invert Keyboard Navigation">
+        <MudSwitch T="bool"
+                    Value=@ViewConfigurationService.Config.InvertKeyboardNavigation
+                    ValueChanged=@OnInvertKeyboardNavigationChanged
+                    Color="Color.Primary" />
+    </SettingsCard>
 </div>
