refactored LTKSearchView and BrowsePage

--- a/HitomiScrollViewerWebApp/Components/LTKSearchView.razor
+++ b/HitomiScrollViewerWebApp/Components/LTKSearchView.razor
@@ -22,9 +22,9 @@
         }
     </MudSelect>
     <MudTextField T="string"
-                  Label="Additional keywords"
+                  Label="Title search keyword"
                   Variant="Variant.Outlined"
-                  Text="@TitleSearchKeyword"
+                  Value="@TitleSearchKeyword"
                   ValueChanged="@TitleSearchKeywordChanged"
                   Clearable />
 </div>
