--- a/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
+++ b/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
@@ -1,9 +1,10 @@
-﻿<MudPaper @attributes=@UserAttributes id="@(DownloadClientManagerService.DOWNLOAD_ITEM_ID_PREFIX + Model.GalleryId)" Style="animation-fill-mode: forwards" Class="d-flex pa-4 gap-4" Outlined>
+﻿<MudPaper @attributes=@UserAttributes id="@(DownloadClientManagerService.DOWNLOAD_ITEM_ID_PREFIX + Model.GalleryId)"
+          Style="animation-fill-mode: forwards" Class="d-flex pa-4 gap-4" Outlined>
     <div style="width: 240px;">
         <MudText>@Model.GalleryId</MudText>
         <MudText>@Model.Gallery?.Title</MudText>
     </div>
-    <div class="align-self-end">
+    <div class="align-self-end" style="flex: 1;">
         <MudProgressLinear Color="Color.Primary"
                            Value="@Model.Progress"
                            Min="0"
