nice nice very nice

--- a/HitomiScrollViewerWebApp/Layout/MainLayout.razor
+++ b/HitomiScrollViewerWebApp/Layout/MainLayout.razor
@@ -24,6 +24,7 @@
                 <MudNavLink Href="/download" Icon="@Icons.Material.Filled.Download">Download</MudNavLink>
                 <MudNavLink Href="/browse" Icon="@Icons.Material.Filled.Folder">Browse</MudNavLink>
                 <MudNavLink Href="/settings" Icon="@Icons.Material.Filled.Settings">Settings</MudNavLink>
+                <MudNavLink Href="/about" Icon="@Icons.Material.Filled.Info">About</MudNavLink>
             </MudNavMenu>
         </MudDrawer>
         <MudMainContent Style="height: 100dvh">
